test/sema/typeck/trait/self-assoc-type-unknown.dora
// Test error when accessing unknown associated type on Self
trait MyTrait {
    type Item;
}

trait Foo: MyTrait {
    fn make(): Self::Unknown {
        unreachable[Self::Unknown]()
    }
}
